# compliance-reasoning-agent

./: .env.example  .gitignore  LICENSE  README.md  agent.md  config.yaml  frontend-standards.md  pyproject.toml  start.ps1  start.sh
.streamlit/: config.toml
app/: __init__.py  main.py
app/agent/: __init__.py  graph.py  state.py
app/agent/nodes/: __init__.py  memory_node.py  patent_node.py  plan_node.py  review_node.py  synthesize_node.py  trend_node.py
app/api/: __init__.py  analysis.py  health.py  patents.py  router.py  trends.py
app/core/: __init__.py  config.py  database.py  redis.py
app/mcp_servers/: __init__.py  patent_server.py  trend_server.py
app/models/: __init__.py  base.py  patent.py  report.py  trend.py
app/repositories/: __init__.py  patent_repo.py  report_repo.py  trend_repo.py
app/services/: __init__.py  llm_service.py  memory_service.py  patent_service.py  trend_service.py
frontend/: app.py  sidebar.py  styles.py
frontend/pages/: patent_matrix.py  report_viewer.py  trend_dashboard.py
scripts/: init_db.py
